[package]
name = "REST_BASIC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["full"] }
chrono = "0.4.21"
rand = "0.8"
hyper = {version = "0.14.11",features = ["full"]}
tower = {version = "0.4.8", features = ["full"]}
tower-http = "0.4.0"
http = "0.2.9"
json = "0.12.4"

